RESOLVED FIXED30589
[GTK] Failing media/video-played-reset.html
https://bugs.webkit.org/show_bug.cgi?id=30589
Summary [GTK] Failing media/video-played-reset.html
Xan Lopez
Reported 2009-10-20 11:59:32 PDT
Seems to jump between failing and timing out.
Attachments
proposed patch (3.15 KB, patch)
2009-11-02 09:51 PST, Philippe Normand
no flags
unskip fixed test (1.40 KB, patch)
2009-11-02 09:51 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2009-11-02 09:51:00 PST
Created attachment 42321 [details] proposed patch Our GStreamer-based player does seeking by sending a seek event to playbin2. Current position is not immediately updated so we can end up in a state where currentTime() is called while a seek is in progress. The patch adds a new private attribute in the player class, used to cache the seek time position during seeking so currentTime reports the correct position.
Philippe Normand
Comment 2 2009-11-02 09:51:58 PST
Created attachment 42322 [details] unskip fixed test
Jan Alonzo
Comment 3 2009-11-02 11:15:22 PST
Comment on attachment 42321 [details] proposed patch r=me.
WebKit Commit Bot
Comment 4 2009-11-02 11:34:24 PST
Comment on attachment 42321 [details] proposed patch Clearing flags on attachment: 42321 Committed r50424: <http://trac.webkit.org/changeset/50424>
WebKit Commit Bot
Comment 5 2009-11-02 12:14:42 PST
Comment on attachment 42322 [details] unskip fixed test Clearing flags on attachment: 42322 Committed r50425: <http://trac.webkit.org/changeset/50425>
WebKit Commit Bot
Comment 6 2009-11-02 12:14:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.