2009-11-02  Philippe Normand  <pnormand@igalia.com>

Reviewed by Jan Alonzo.

        [GTK] Failing media/video-played-reset.html
        https://bugs.webkit.org/show_bug.cgi?id=30589

        new m_seekTime attribute to keep track of the seek position

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::currentTime):
        (WebCore::MediaPlayerPrivate::seek):
        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/41857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50424 268f45cc-cd09-0410-ab3c-d52691b4dbfc